--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "title":"三尺",
     "subTitle":"冰冻三尺非一日之寒",
     "avatarUrl":"https://avatars.githubusercontent.com/u/160885137?v=4",
+    "homeUrl":"https://sanch.top",
     "GMEEK_VERSION":"last"
 }
