--- a/config.json
+++ b/config.json
@@ -4,5 +4,7 @@
     "avatarUrl":"https://avatars.githubusercontent.com/u/160885137?v=4",
     "homeUrl":"https://sanch.top",
     "onePageListNum":20,
+    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
+
     "GMEEK_VERSION":"last"
 }
