--- a/config.json
+++ b/config.json
@@ -5,6 +5,8 @@
     "homeUrl":"https://sanch.top",
     "onePageListNum":20,
     "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
+    "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script>",
+    "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>",
 
     "GMEEK_VERSION":"last"
 }
