--- a/config.json
+++ b/config.json
@@ -8,6 +8,9 @@
     "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script>",
     "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>",
     "singlePage":["about"],
+    "showPostSource":0,
+    "needComment":1,
+    "bottomText":"转载请注明出处",
 
     "GMEEK_VERSION":"last"
 }
