--- a/config.json
+++ b/config.json
@@ -11,6 +11,9 @@
     "showPostSource":0,
     "needComment":1,
     "bottomText":"转载请注明出处",
+    "themeMode":"fix",
+    "dayTheme":"light_tritanopia",
+    "nightTheme":"github-light",
 
     "GMEEK_VERSION":"last"
 }
